# neuro-ceiling

./: .gitignore  .gitmodules  .pylintrc  404.html  ConfigGenerator.py  GamepadToLSL.py  README.md  datarecorder.py  environment.yml  format.sh  index.html  lint.sh  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  test.py  trainEegDecoder.py
.github/workflows/: commit-check.yml
api/: index.html
design/design/: index.html
diagrams/src/: Overview.puml
docs/: api.md  environment.md  index.md  notes.md
docs/design/: Test.puml  design.md
environment/: index.html
example/: SendData.py
neuroceiling/: __init__.py  configuration.py  keyboardobserver.py
neuroceiling/dataaquisition/: __init__.py  antneurocapdatastream.py  dataset.py  datastream.py  moabbdataset.py  xdffile.py
notes/: index.html
search/: search_index.json
src/: ConfigGenerator.py  GamepadToLSL.py  collect_data.py  collect_demonstrations.py  create_plot.py  data_analysis.py  datarecorder.py  manual_robot_control.py  pre_train.py  trainEegDecoder.py  update_wandb.py
src/agent/: __init__.py  agent.py
src/config/: ceiling_evaluate_config.py  ceiling_train_config.py  collect_data_config.py  collect_demonstrations_config.py  collect_demonstrations_config_new.py  manual_robot_config.py  pre_train_config.py
src/controller/: __init__.py  controller.py  controllerstep.py  periodiccontroller.py
src/dataset/: scene.py  trajectory.py
src/environment/: __init__.py  environment.py  franka.py  mani_skill.py
src/envs/: __init__.py  environment.py  maniskill.py  mock.py  object.py  scene.py  (+3 more)
(+49 files in other folders)
